crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@type_mismatch_function.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "type A = I32\n\nfn main() {\n    A()\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/type_mismatch_function.au
---
Error: Expected function
   ╭─[ main:4:5 ]
   │
 4 │     A()
   │     ─┬─  
   │      ╰─── Can only call functions, but got `Type[I32]`
───╯
